adds info component, adds motion api
