# wdip-fe/src/service/wdip-be/models/index.ts
@@ -1,9 +1,0 @@
-export * from './ErrorModel';
-export * from './Motion';
-export * from './Motions';
-export * from './MotionsByParty';
-export * from './MotionsByPartyResults';
-export * from './Party';
-export * from './Proposal';
-export * from './Stakeholder';
-export * from './Word';
